force-app/main/default/objects/Dealer__c/Dealer__c.object-meta.xml
<CustomObject>
    <description>Referenced by Stores.</description>
    <label>Dealer</label>
    <nameField>
        <label>Dealership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>