force-app/main/default/objects/Dealer__c/fields/Date_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Inactivated__c</fullName>
    <description>Date the Dealer was Inactivated.</description>
    <inlineHelpText>This is the Date the Dealer was Inactivated.</inlineHelpText>
    <label>Date Inactivated</label>
    <type>DateTime</type>
</CustomField>