force-app/main/default/objects/Dealer__c/fields/Dealer_FEIN__c.field-meta.xml
<CustomField>
    <fullName>Dealer_FEIN__c</fullName>
    <description>Dealership FEIN Number and it is encrypted.</description>
    <inlineHelpText>This is the encrypted Dealership FEIN number.</inlineHelpText>
    <label>Dealer FEIN</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>