force-app/main/default/objects/Dealer__c/fields/Dealer_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Org_Type__c</fullName>
    <description>Used to explicitly identify the organization type needed for the interface to Xstore
Field Type: Store Data
Integrated: Y - SF&gt;Xstore</description>
    <inlineHelpText>Used to identify the organization type needed for  Xstore</inlineHelpText>
    <label>Dealer Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>corp_group</fullName>
            </value>
            <value>
                <fullName>branded_group</fullName>
            </value>
            <value>
                <fullName>dealer_group_us</fullName>
            </value>
            <value>
                <fullName>dealer_group_ca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>