force-app/main/default/objects/Dealer__c/fields/Dealer_SSN__c.field-meta.xml
<CustomField>
    <fullName>Dealer_SSN__c</fullName>
    <description>Dealer Encrypted Social Security Number.</description>
    <inlineHelpText>This is the encrypted Social Security Number.</inlineHelpText>
    <label>Dealer SSN</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>