force-app/main/default/objects/Dealer__c/fields/Email_financials_for_ROMs__c.field-meta.xml
<CustomField>
    <fullName>Email_financials_for_ROMs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email financials for ROMs
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please check this box if the finance team must Email financials for ROMs.</inlineHelpText>
    <label>*Delete* Email financials for ROMs</label>
    <type>Checkbox</type>
</CustomField>