force-app/main/default/objects/Dealer__c/fields/Financial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Financial_Notes__c</fullName>
    <description>Financial Notes
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please enter your financial notes in this field.</inlineHelpText>
    <label>*Delete* Financial Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>