force-app/main/default/objects/Dealer__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <description>This is a system generated field
Field Type: Store Data
Integrated: Y - SF&gt;pricing portal</description>
    <inlineHelpText>This is a system generated number</inlineHelpText>
    <label>Group Number</label>
    <type>AutoNumber</type>
</CustomField>