force-app/main/default/objects/Dealer__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is the Date the dealer was inactivated.</description>
    <inlineHelpText>This is based on any related owners. If all Owner for Dealer records are deactivated for an Dealer, the Dealer will be inactivated and the current date will be set.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>