force-app/main/default/objects/Dealer__c/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <description>What is the legal Entity Type
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>What type of legal entity is this dealer?</inlineHelpText>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S-Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>