force-app/main/default/objects/Dealer__c/recordTypes/Dealer_Operations.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Operations</fullName>
    <active>true</active>
    <label>Dealer Operations</label>
</RecordType>