force-app/main/default/objects/Dealer__c/listViews/All_Dealers.listView-meta.xml
<ListView>
    <fullName>All_Dealers</fullName>
    <columns>NAME</columns>
    <columns>Group_Number__c</columns>
    <columns>Legal_Entity_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Dealer_Org_Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>Date_Inactivated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Dealers</label>
</ListView>